--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "git": "^0.1.5",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
